<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mucaroo.characterdailyapp.activities.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/InputGroup">

                <TextView
                    style="@style/Label"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/txt_email"
                    style="@style/Input"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout style="@style/InputGroup">

                <TextView
                    style="@style/Label"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/txt_password"
                    style="@style/Input"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout style="@style/InputGroup">

                <TextView
                    style="@style/Label"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/txt_password_confirm"
                    style="@style/Input"
                    android:inputType="textPassword" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_register"
                style="@style/BtnPrimary"
                android:layout_marginBottom="10dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/btn_back"
                style="@style/BtnPrimary"
                android:text="@string/back" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
