<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mucaroo.characterdailyapp.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:srcCompat="@mipmap/ic_login" />

            <LinearLayout style="@style/InputGroup">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/txt_email"
                    style="@style/Input"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout style="@style/InputGroup">

                <TextView
                    style="@style/Label"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/txt_password"
                    style="@style/Input"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/BtnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_register"
                style="@style/BtnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <!--<Button-->
                <!--android:id="@+id/buttonShowCustomDialog"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Show Custom Dialog" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
