<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.mucaroo.characterdailyapp.activities.IntroductionActivity">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/LessonLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:weightSum="12">

                <RelativeLayout
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Crumb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/daily_lesson" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="12">

                        <ImageView
                            android:id="@+id/lessonimage"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_weight="3"
                            android:padding="20dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@mipmap/ic_launcher" />

                        <TextView
                            android:id="@+id/lessontitle"
                            style="@style/Heading"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_weight="9"
                            android:text="@string/placeholder" />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/QuoteLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/LessonLayout"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:weightSum="12">

                <RelativeLayout
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Crumb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/daily_quote" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="12">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="4"
                            android:scaleType="fitCenter"
                            android:src="@drawable/quote" />

                        <TextView
                            android:id="@+id/tvquoteBody"
                            style="@style/Heading"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="8"
                            android:text="@string/placeholder" />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/behaviour"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/QuoteLayout"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:weightSum="12">


                <RelativeLayout
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Crumb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/daily_behavior" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="12">

                        <TextView
                            android:id="@+id/tvbehave"
                            style="@style/Heading"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="12"
                            android:text="Acknowledge\n  students who..." />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id= "@+id/Pledge"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/behaviour"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:layout_marginBottom="70dp"
                android:weightSum="12">

                <RelativeLayout
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/Crumb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/daily_pledge" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="12">

                        <TextView
                            android:id="@+id/tvquote"
                            style="@style/Heading"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="12"
                            android:text="I am grateful..." />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#A9A9A9">

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20px">

                <TextView
                    android:id="@+id/tv_calander"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LinearLayout01"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/btn_all_lessons"
                    style="@style/btn_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="ALL LESSONS"></Button>


                <Button
                    android:id="@+id/btn_more_options"
                    style="@style/btn_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:text="MORE..."></Button>
                <!--android:layout_marginRight="40px"-->
            </RelativeLayout>

        </FrameLayout>
    </RelativeLayout>

</ScrollView>